--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/images/himasif.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>360 AI - HIMASIF Assistant | Chatbot Cerdas UPJ</title>
     <meta name="description" content="360 AI - Asisten virtual cerdas HIMASIF yang bisa menjawab pertanyaan apapun seperti ChatGPT!" />
